server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-eats-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: go-eats-server
  template:
    metadata:
      labels:
        name: go-eats-server
    spec:
      containers:
        - name: go-eats-server
          image: bentohset/go-eats-server:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: go-eats-server
spec:
  type: LoadBalancer
  selector:
    name: go-eats-server
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
